<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/render_ui_background">

    <SurfaceView
        android:id="@+id/capture_preview"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/capture_title"
        android:textColor="@color/render_ui_on_background"
        android:textSize="22sp" />

    <TextView
        android:id="@+id/capture_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/capture_created"
        android:textColor="@color/render_ui_on_background"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/capture_debug_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="72dp"
        android:text="@string/capture_debug_info_empty"
        android:textColor="@color/render_ui_on_background"
        android:textSize="14sp" />

    <Button
        android:id="@+id/capture_switch_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="64dp"
        android:enabled="false"
        android:text="@string/capture_lens_front" />

</FrameLayout>
